2008-04-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/MarbleWidgetInputHandler.cpp:

    - Added Quality Settings and a ViewContext to Marble Widget
    - Removed setQuickDirty(true) and quickDirty() as those 
      can now be perfectly emulated by choosing MapQuality::Low.
    - Honoring viewContexts for the middle mouse button / wheel

    * examples/example2.ui:

    - Removed "Quick Dirty" checkbox from the 2nd example.

    * src/lib/ViewParams.{cpp,h}:
    * src/lib/MarbleMap.cpp:
    * src/lib/MarbleControlBox.cpp:
    * src/lib/MarbleModel.cpp:
    * src/lib/GlobeScanlineTextureMapper.cpp:
    * src/lib/VectorComposer.cpp:

    - Added Quality Settings to Marble Map

2008-03-26  Inge Wallin  <inge@lysator.liu.se>

	Remove some old FIXMEs.
	* src/lib/MarbleMap_p.cpp (m_modelIsOwned): new member
	* src/lib/MarbleMap.cpp (constructors): keep track of if the model
	is owned.
	(destructor): only delete model if it's owned.
	(update): removed
	(updateGps): Don't call update()
	(paint): removed
	(doPaint): renamed into paint()
	* src/lib/MarbleWidget.cpp (construct): Disabled a few connect()s
	* src/lib/MarbleTool.cpp: fixed some comments
	* src/lib/MercatorProjection.cpp(screenCoordinates): removed FIXME
	* src/lib/SunLocator.{h,cpp} (shading): use lon/lat instead of lat/lon
	* src/lib/MergedLayerPainter.cpp (paintSunShading): use new convention
	* src/lib/TextureTile.cpp (loadTile): Indent
	* src/lib/ViewParams.cpp: Remove 2 FIXMEs
	
	Remove unnecessary function
	* src/lib/MarbleWidget.{h,cpp} (paint): removed

	Remove some unneeded members.
	* src/lib/MeasureTool.h (m_visibleArea, m_centerLat, m_centerLon,
	m_radius): remove

	Fix repetition of drawing of the measure tool in some
	projections. Also change some function names.
	* src/lib/MeasureTool.cpp (drawDistancePath): Draw repetition
	(paintMeasurePoints)      -> paint
	(paintDistancePoints)     -> drawDistancePoints
	(paintMark)               -> drawMark